# smart_speaker_sdk

./: .gitignore  README.md
Bluetooth/BlueZ/include/: BlueZConstants.h
Bluetooth/BlueZ/include/BlueZ/: BlueZA2DPSink.h  BlueZA2DPSource.h  BlueZAVRCPController.h  BlueZAVRCPTarget.h  BlueZBluetoothDevice.h  BlueZBluetoothDeviceManager.h  BlueZConstants.h  BlueZDeviceManager.h  BlueZHostController.h  BlueZUtils.h  DBusConnection.h  DBusObject.h  DBusObjectBase.h  DBusPropertiesProxy.h  DBusProxy.h  GVariantMapReader.h  GVariantTupleReader.h  MPRISPlayer.h  ManagedGError.h  ManagedGVariant.h  MediaContext.h  MediaEndpoint.h  PairingAgent.h
Bluetooth/BlueZ/src/: BlueZA2DPSink.cpp  BlueZA2DPSource.cpp  BlueZAVRCPController.cpp  BlueZAVRCPTarget.cpp  BlueZBluetoothDevice.cpp  BlueZBluetoothDeviceManager.cpp  BlueZDeviceManager.cpp  BlueZHostController.cpp  DBusConnection.cpp  DBusObjectBase.cpp  DBusPropertiesProxy.cpp  DBusProxy.cpp  GVariantMapReader.cpp  GVariantTupleReader.cpp  MPRISPlayer.cpp  MediaContext.cpp  PairingAgent.cpp
Bluetooth/BlueZ/test/: BluetoothTest.cpp  CMakeLists.txt
Bluetooth/BlueZ/test/Discoverable/: CMakeLists.txt  DiscoverableTest.cpp
BluetoothDevice/BlueZ/include/BlueZ/: BlueZA2DPSink.h  BlueZA2DPSource.h  BlueZAVRCPController.h  BlueZAVRCPTarget.h  BlueZBluetoothDevice.h  BlueZBluetoothDeviceManager.h  BlueZConstants.h  BlueZDeviceManager.h  BlueZHostController.h  BlueZUtils.h  DBusConnection.h  DBusObject.h  DBusObjectBase.h  DBusPropertiesProxy.h  DBusProxy.h  GVariantMapReader.h  GVariantTupleReader.h  MPRISPlayer.h  ManagedGError.h  ManagedGVariant.h  MediaContext.h  MediaEndpoint.h  PairingAgent.h  PulseAudioBluetoothInitializer.h
BluetoothDevice/BlueZ/src/: BlueZA2DPSink.cpp  BlueZA2DPSource.cpp  BlueZAVRCPController.cpp  BlueZAVRCPTarget.cpp  BlueZBluetoothDevice.cpp  BlueZBluetoothDeviceManager.cpp  BlueZDeviceManager.cpp  BlueZHostController.cpp  DBusConnection.cpp  DBusObjectBase.cpp  DBusPropertiesProxy.cpp  DBusProxy.cpp  GVariantMapReader.cpp  GVariantTupleReader.cpp  MPRISPlayer.cpp  MediaContext.cpp  MediaEndpoint.cpp  PairingAgent.cpp  PulseAudioBluetoothInitializer.cpp
BluetoothDevice/BlueZ/test/Discoverable/: BluetoothStreamFromDevice.cpp  CMakeLists.txt  DiscoverableTest.cpp
BluetoothDevice/BlueZ/test/Pairing/: BluetoothStreamToDevice.cpp  CMakeLists.txt  PairingTest.cpp
Common/SDKInterfaces/include/Common/SDKInterfaces/Bluetooth/: BluetoothDeviceInterface.h  BluetoothDeviceManagerInterface.h  BluetoothDeviceObserverInterface.h  BluetoothHostControllerInterface.h
Common/SDKInterfaces/include/Common/SDKInterfaces/Bluetooth/Services/: A2DPSinkInterface.h  A2DPSourceInterface.h  AVRCPControllerInterface.h  AVRCPTargetInterface.h  BluetoothServiceInterface.h  SDPRecordInterface.h
Common/Utils/include/Common/Utils/: AudioFormat.h  AudioInputStream.h  MacAddressString.h  RequiresShutdown.h
Common/Utils/include/Common/Utils/Bluetooth/: A2DPRole.h  BluetoothEventBus.h  BluetoothEventListenerInterface.h  BluetoothEvents.h  FormattedAudioStreamAdapter.h  FormattedAudioStreamAdapterListener.h  SDPRecords.h
Common/Utils/include/Common/Utils/Logger/: Level.h  Log.h
Common/Utils/include/Common/Utils/Memory/: Memory.h
Common/Utils/include/Common/Utils/SDS/: BufferLayout.h  InProcessSDS.h  Reader.h  ReaderPolicy.h  SharedDataStream.h  Writer.h  WriterPolicy.h
Common/Utils/include/Common/Utils/Threading/: Executor.h  TaskThread.h  ThreadMoniker.h
Common/Utils/include/Common/Utils/UUIDGeneration/: UUIDGeneration.h
Common/Utils/src/: BluetoothEventBus.cpp  FormattedAudioStreamAdapter.cpp  MacAddressString.cpp  RequiresShutdown.cpp  UUIDGeneration.cpp
Common/Utils/src/Bluetooth/: SDPRecords.cpp
Common/Utils/src/Logger/: Level.cpp
Common/Utils/src/Threading/: Executor.cpp  TaskThread.cpp  ThreadMoniker.cpp
Common/Utils/test/Common/Logger/: CMakeLists.txt  LoggerTest.cpp
Docs/: OLLI-BLuetoothAPI.docx
